[SCRUM-58] refactor: 날씨 수집 로직 및 DB 정리 리팩토링 (중복 제거, N+1 개선)